tests/compile_fail/runtime_make_descriptor_non_pipeline_misuse.cpp
#include <pb/pipeline.hpp>

struct NotAPipeline {};

int main() {
  (void)pb::make_descriptor<NotAPipeline>();
  return 0;
}
